--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://mmmvirtuallab-cloud.github.io/vl-homepage/",
+  
+ 
+  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d dist"
+    
+    
   },
   "dependencies": {
     "react": "^19.1.1",
