--- a/package.json
+++ b/package.json
@@ -3,22 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
- 
-  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-    
-    
-    
-    
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
